test/libsolidity/syntaxTests/storageLayoutSpecifier/hex_string.sol
contract C layout at hex"616263" {}
// ----
// TypeError 6396: (21-32): The base slot of the storage layout must evaluate to a rational number.
